centralizando titulos com css

--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>Curso de Xhtml</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>XTI - Evoluindo com simplicidade</h1>
+	<h1 align="center">XTI - Evoluindo com simplicidade</h1>
 
 	<h3>A melhor empresa Brasileira de TI para se trabalhar</h3>
 
