centralizando e ormatando rodape

--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -33,10 +33,12 @@ Prosperidade Financeira com Remuneração Variável
 Pesquisa e Desenvolvimento de Novas Tecnologias
 Intercâmbio Cultural com Membros de outros Países
 
-Diretamente de Brasília,
-Sra. Alexandra Maria Lelis
-www.xti.com.br | comercial@xti.com.br
-2a Feira | Beba H2O durante os estudos!
+	<p class="rodape">
+	Diretamente de Brasília, <br />
+	S<sup>ra.</sup> Alexandra Maria Lelis <br />
+	www.xti.com.br | comercial@xti.com.br<br />
+	2<sup>a</sup> Feira | Beba H2O durante os estudos!
+	</p>
 
 </body>
 </html>
