adicionando marcações de texto e citação

--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -15,7 +15,7 @@
 	</p>
 
 	<p>
-	Desde sua abertura a XTI já construiu mais de 1000 portais corporativos em todo o Brasil, este grande volume de projetos representa um mar de oportunidades de crescimento para os profissionais com foco em resultado e que queiram assumir posições de liderança nos projetos. Estes profissionais recebem todo o espaço e treinamentos necessários para crescer profissionalmente dentro da empresa.
+	Desde sua abertura a XTI já construiu <em>mais de 1000 portais corporativos</em> em <strong>todo o Brasil</strong>, este grande volume de projetos representa um mar de oportunidades de crescimento para os <big>profissionais<big> com foco em resultado e que queiram assumir <small>posições</small> de liderança nos projetos. Estes profissionais recebem todo o espaço e treinamentos necessários para crescer profissionalmente dentro da empresa.
 	</p>
 
 	<p>
@@ -37,7 +37,7 @@ Intercâmbio Cultural com Membros de outros Países
 	Diretamente de Brasília, <br />
 	S<sup>ra.</sup> Alexandra Maria Lelis <br />
 	www.xti.com.br | comercial@xti.com.br<br />
-	2<sup>a</sup> Feira | Beba H2O durante os estudos!
+	2<sup>a</sup> Feira | <q>Beba <sub>H</sub>2<sub>O</sub> durante os estudos!</q>
 	</p>
 
 </body>
