--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -9,7 +9,10 @@
 	<h1 align="center">XTI - Evoluindo com simplicidade</h1>
 
 	<h3>A melhor empresa Brasileira de TI para se trabalhar</h3>
-
+	<figure style="text-align:center;">
+		<img src="image/img01.png" alt="Equipe xti">
+		<figcaption>Imagem Ilustrativa</figcaption> <!--FONTE DA IMAGEM: hhttps://www.profissionaisti.com.br/2011/12/como-ser-promovido-a-gerente/-->
+	</figure>
 	<p>
 	A XTI é uma empresa de serviços em TI, especializada em conectar instituições aos seus públicos on-line (funcionários, clientes e parceiros), através do desenvolvimento de portais, sistemas e produtos WEB. Com sede em Brasília e filiais em São Paulo e Rio de Janeiro, atende a Governo, Indústrias do setor Financeiro, Energia e Comunicação. Dentre seus cases mais recentes, citamos em Brasília o Sistema Indústria (CNI, SESI, SENAI, IEL) com a criação dos portais, entranets e sistemas das entidades, e em São Paullo na TV Record com a criação e autenticação do Portal R7 e demais hostsites dos programas da emissora.
 	</p>
@@ -21,8 +24,12 @@
 	<p>
 	A XTI se tornou a maior e melhor prestadora de serviçõs em TI no Brasil, pelo seu atendimento humano e qualidade técnica de alto nível. Veja abaixo aluns dos benefícios da empresa qu azem desta uma referência na área de TI para os melhores profissionais do mercado:
 	</p>
+	<figure class = "imageCorespondente">
+		<img src="image/img2.jpg" alt="correspondente de brasilia" align="right">
+		<!-- FONTE DA IMAGEM: http://pt.123rf.com/photo_17563587_jovem-mulher-de-neg%C3%B3cios-olhando-para-tablet-moderno,-com-%C3%ADcones-coloridos-de-tecnologia.html -->
+	</figure>
 
-Oportunidade de AScensão Profissional
+Oportunidade de Ascensão Profissional
 Conquista de Conhecimento Multidisciplinar
 Treinamentos Técnicos Gratuitos
 Treinamento Gerencial e MBA para Líderes
