--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -28,19 +28,51 @@
 		<img src="image/img2.jpg" alt="correspondente de brasilia" align="right">
 		<!-- FONTE DA IMAGEM: http://pt.123rf.com/photo_17563587_jovem-mulher-de-neg%C3%B3cios-olhando-para-tablet-moderno,-com-%C3%ADcones-coloridos-de-tecnologia.html -->
 	</figure>
+	<ul>
+		<li>Oportunidade de Ascensão Profissional</li>
+		<li>Conquista de Conhecimento Multidisciplinar</li>
+		<li>Treinamentos Técnicos Gratuitos
+		Treinamento Gerencial e MBA para Líderes</li>
+		<li>Possibilidade de Trabalhar se Divertindo</li>
+		<li>Plano de Saúde e Ginástica Laboratorial</li>
+		<li>Localização Estratégica dos Escritórios</li>
+		<li>Prosperidade Financeira com Remuneração Variável</li>
+		<li>Pesquisa e Desenvolvimento de Novas Tecnologias</li>
+		<li>Intercâmbio Cultural com Membros de outros Países</li>
+	</ul>
+	<dl>
+		<dt>Tecnologia</dt>
+			<dd>Ferramenta e as máquinas que ajudam a resolver problemas.</dd>
+			<dd>Estudo dos instrumentos, processos e métodos empregados nos diversos ramos industriais.</dd>
+		<dt>Internet</dt>
+			<dd>Rede telemática internacional que une computadores de particulares, organizações de pesquisa, institutos de cultura, institutos militares, bibliotecas, corporações de todos os tamanhos. </dd>
+		<dt>Software</dt>
+			<dd>Conjunto de instruções armazenadas em disco(s) ou em chips internos do computador que determinam os programas básicos, utilitários ou aplicativos, que ele tem para serem usados.</dd>
+	</dl>
+	<ol>
+		<li>Spider
+			<ul>
+				<li>Ferrari 360 Spider</li>
+				<li>BMW z4</li>
+			</ul>
+		</li>
 
-Oportunidade de Ascensão Profissional
-Conquista de Conhecimento Multidisciplinar
-Treinamentos Técnicos Gratuitos
-Treinamento Gerencial e MBA para Líderes
-Possibilidade de Trabalhar se Divertindo
-Plano de Saúde e Ginástica Laboratorial
-Localização Estratégica dos Escritórios
-Prosperidade Financeira com Remuneração Variável
-Pesquisa e Desenvolvimento de Novas Tecnologias
-Intercâmbio Cultural com Membros de outros Países
+		<li>Berlinetta
+			<ul>
+				<li>Ferrari Dino</li>
+				<li>Lamborguini Miura</li>
+			</ul>
+		</li>
 
-	<p class="rodape">
+		<li>Cabriolet
+			<ul>
+				<li>Pegeout 307</li>
+				<li>BMW Serie</li>
+				<li>Renault Megane</li>
+			</ul>
+		</li>	
+	</ol>
+	<p class = "rodape">
 	Diretamente de Brasília, <br />
 	S<sup>ra.</sup> Alexandra Maria Lelis <br />
 	www.xti.com.br | comercial@xti.com.br<br />
