citação em bloco e utilizaça da tag pre

--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -24,6 +24,19 @@
 	<p>
 	A XTI se tornou a maior e melhor prestadora de serviçõs em TI no Brasil, pelo seu atendimento humano e qualidade técnica de alto nível. Veja abaixo aluns dos benefícios da empresa qu azem desta uma referência na área de TI para os melhores profissionais do mercado:
 	</p>
+
+	<blockquote>
+		Atenção desenvolvedor, é preciso conhecer XHTML, CSS, JavaScript (Ajax e JQuery) XML e Edição de Imagens para se tornar um Programador de INterfaces XTI.
+	</blockquote>
+
+	<pre>
+		Este 
+				documento
+							está
+									pré
+											formatado!
+	</pre>
+	
 	<figure class = "imageCorespondente">
 		<img src="image/img2.jpg" alt="correspondente de brasilia" align="right">
 		<!-- FONTE DA IMAGEM: http://pt.123rf.com/photo_17563587_jovem-mulher-de-neg%C3%B3cios-olhando-para-tablet-moderno,-com-%C3%ADcones-coloridos-de-tecnologia.html -->
