elementos adress e hr

--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -8,6 +8,8 @@
 <body>
 	<h1 align="center">XTI - Evoluindo com simplicidade</h1>
 
+	<hr />
+
 	<h3>A melhor empresa Brasileira de TI para se trabalhar</h3>
 	<figure style="text-align:center;">
 		<img src="image/img01.png" alt="Equipe xti">
@@ -36,7 +38,7 @@
 									pré
 											formatado!
 	</pre>
-	
+
 	<figure class = "imageCorespondente">
 		<img src="image/img2.jpg" alt="correspondente de brasilia" align="right">
 		<!-- FONTE DA IMAGEM: http://pt.123rf.com/photo_17563587_jovem-mulher-de-neg%C3%B3cios-olhando-para-tablet-moderno,-com-%C3%ADcones-coloridos-de-tecnologia.html -->
@@ -85,12 +87,12 @@
 			</ul>
 		</li>	
 	</ol>
-	<p class = "rodape">
+	<adreess class = "rodape">
 	Diretamente de Brasília, <br />
 	S<sup>ra.</sup> Alexandra Maria Lelis <br />
 	www.xti.com.br | comercial@xti.com.br<br />
 	2<sup>a</sup> Feira | <q>Beba <sub>H</sub>2<sub>O</sub> durante os estudos!</q>
-	</p>
+	</adreess>
 
 </body>
 </html>
