links externos e internos

--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -10,13 +10,15 @@
 
 	<hr />
 
-	<h3>A melhor empresa Brasileira de TI para se trabalhar</h3>
+	<h2>A melhor empresa Brasileira de TI para se trabalhar</h2>
 	<figure style="text-align:center;">
-		<img src="image/img01.png" alt="Equipe xti">
+		<a href="http://www.universidadexti.com.br" target="_blank" alt = "Acesso a Universidade Xti" title= "Acesso a Universidade Xti">
+			<img src="image/img01.png" alt="Equipe xti">
+		</a>
 		<figcaption>Imagem Ilustrativa</figcaption> <!--FONTE DA IMAGEM: hhttps://www.profissionaisti.com.br/2011/12/como-ser-promovido-a-gerente/-->
 	</figure>
 	<p>
-	A XTI é uma empresa de serviços em TI, especializada em conectar instituições aos seus públicos on-line (funcionários, clientes e parceiros), através do desenvolvimento de portais, sistemas e produtos WEB. Com sede em Brasília e filiais em São Paulo e Rio de Janeiro, atende a Governo, Indústrias do setor Financeiro, Energia e Comunicação. Dentre seus cases mais recentes, citamos em Brasília o Sistema Indústria (CNI, SESI, SENAI, IEL) com a criação dos portais, entranets e sistemas das entidades, e em São Paullo na TV Record com a criação e autenticação do Portal R7 e demais hostsites dos programas da emissora.
+	A XTI é uma empresa de serviços em TI, especializada em conectar instituições aos seus públicos on-line (funcionários, clientes e parceiros), através do desenvolvimento de portais, sistemas e produtos WEB. Com sede em Brasília e filiais em São Paulo e Rio de Janeiro, atende a Governo, Indústrias do setor Financeiro, Energia e Comunicação. Dentre seus cases mais recentes, citamos em Brasília o Sistema Indústria (CNI, SESI, SENAI, IEL) com a criação dos portais, entranets e sistemas das entidades, e em <a href="http://www.sp.gov.br" target="_blank">São Paulo</a> na TV Record com a criação e autenticação do <a href = "http://www.r7.com" target="_blank">Portal R7</a> e demais hostsites dos programas da emissora.
 	</p>
 
 	<p>
@@ -24,8 +26,21 @@
 	</p>
 
 	<p>
-	A XTI se tornou a maior e melhor prestadora de serviçõs em TI no Brasil, pelo seu atendimento humano e qualidade técnica de alto nível. Veja abaixo aluns dos benefícios da empresa qu azem desta uma referência na área de TI para os melhores profissionais do mercado:
+	A XTI se tornou a maior e melhor prestadora de serviçõs em TI no Brasil, pelo seu atendimento humano e qualidade técnica de alto nível. Veja abaixo aluns dos <a href="beneficios/beneficios.html">benefícios da empresa</a> que fazem desta uma referência na área de TI para os melhores profissionais do mercado:
 	</p>
+
+	<ul>
+		<li><a href = "beneficios/beneficios.html#oportunidade">Oportunidade de Ascensão Profissional</a></li>
+		<li><a href = "beneficios/beneficios.html#conhecimento">Conquista de Conhecimento Multidisciplinar</a></li>
+		<li><a href = "beneficios/beneficios.html#treinamentosTecnicos">Treinamentos Técnicos Gratuitos</a></li>
+		<li><a href = "beneficios/beneficios.html#treinamentosLideres">Treinamento Gerencial e MBA para Líderes</a></li>
+		<li><a href = "beneficios/beneficios.html#trabalho">Possibilidade de Trabalhar se Divertindo</a></li>
+		<li><a href = "beneficios/beneficios.html#saude">Plano de Saúde e Ginástica Laboratorial</a></li>
+		<li><a href = "beneficios/beneficios.html#localizacao">Localização Estratégica dos Escritórios</a></li>
+		<li><a href = "beneficios/beneficios.html#prosperidade">Prosperidade Financeira com Remuneração Variável</a></li>
+		<li><a href = "beneficios/beneficios.html#pesquisas">Pesquisa e Desenvolvimento de Novas Tecnologias</a></li>
+		<li><a href = "beneficios/beneficios.html#ambiente">Intercâmbio Cultural com Membros de outros Países</a></li>
+	</ul>
 
 	<blockquote>
 		Atenção desenvolvedor, é preciso conhecer XHTML, CSS, JavaScript (Ajax e JQuery) XML e Edição de Imagens para se tornar um Programador de INterfaces XTI.
@@ -43,18 +58,7 @@
 		<img src="image/img2.jpg" alt="correspondente de brasilia" align="right">
 		<!-- FONTE DA IMAGEM: http://pt.123rf.com/photo_17563587_jovem-mulher-de-neg%C3%B3cios-olhando-para-tablet-moderno,-com-%C3%ADcones-coloridos-de-tecnologia.html -->
 	</figure>
-	<ul>
-		<li>Oportunidade de Ascensão Profissional</li>
-		<li>Conquista de Conhecimento Multidisciplinar</li>
-		<li>Treinamentos Técnicos Gratuitos
-		Treinamento Gerencial e MBA para Líderes</li>
-		<li>Possibilidade de Trabalhar se Divertindo</li>
-		<li>Plano de Saúde e Ginástica Laboratorial</li>
-		<li>Localização Estratégica dos Escritórios</li>
-		<li>Prosperidade Financeira com Remuneração Variável</li>
-		<li>Pesquisa e Desenvolvimento de Novas Tecnologias</li>
-		<li>Intercâmbio Cultural com Membros de outros Países</li>
-	</ul>
+	
 	<dl>
 		<dt>Tecnologia</dt>
 			<dd>Ferramenta e as máquinas que ajudam a resolver problemas.</dd>
@@ -87,12 +91,12 @@
 			</ul>
 		</li>	
 	</ol>
-	<adreess class = "rodape">
+	<adress class = "rodape">
 	Diretamente de Brasília, <br />
 	S<sup>ra.</sup> Alexandra Maria Lelis <br />
 	www.xti.com.br | comercial@xti.com.br<br />
 	2<sup>a</sup> Feira | <q>Beba <sub>H</sub>2<sub>O</sub> durante os estudos!</q>
-	</adreess>
+	</adress>
 
 </body>
 </html>
