--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -91,6 +91,14 @@
 			</ul>
 		</li>	
 	</ol>
+
+	<div>
+		<h4>Contato</h4>
+		<a href = "mailto:rh@xti.com.br">Email</a><br />
+		<a href = "callto:+556133225064">Telefone</a><br />
+		
+	</div>
+	<br />
 	<adress class = "rodape">
 	Diretamente de Brasília, <br />
 	S<sup>ra.</sup> Alexandra Maria Lelis <br />
