arquivo2 mapeamento de imagens

--- a/arquivos2/index.html
+++ b/arquivos2/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Mapeamento de Imagens</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+	<img src="image/brasil.jpg" usemap = "#brasil" alt="tropical">
+	<!--LINK DA IMAGEM http://www.topimagens.com/imagem/1279-->
+	<map name = "brasil">
+		<area shape="rect" coords="112,178,316,369" href = "brasil/chinelo.html" alt="Chinelo">
+		<area shape="circle" coords="456,306,82" href="brasil/coco.html" alt = "Coco">
+		<area shape="poly" coords="252,125,369,181,373,42" href="brasil/barco.html" alt="barco">
+	</map>
 </body>
 </html>
