--- a/arquivos3/index.html
+++ b/arquivos3/index.html
@@ -3,10 +3,71 @@
 <head>
 	<meta charset="utf-8">
 	<title>Restaurante XHTML</title>
-	<link rel="stylesheet" type="text/css" href="css/style.html">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Restaurante XHTML</h1>
+	<div class = "comidas">
+		<h3>Comidas</h3>
+
+		<img src="image/batata.jpeg">
+		<!--LINK DA IMAGEM http://gourmetadois.com/receita/batatas-assadas-com-alecrim-40.html-->
+		<h4>Batata Assada</h4>
+		<p>Excelente repositor de energias, aconselhado como refeição durante o dia para os atletas profissionais.</p>
+
+		<img src="image/escondidinho.jpg">
+		<!--LINK DA IMAGEM http://www.receitaereceitas.com.br/receita-de-escondidinho-de-arroz/-->
+		<h4>Escondidinho</h4>
+		<p>Delicioso prato a base de carne de sol, creme de leite, requeijão e mandioca, tem como dar errado um prato assim?</p>
+
+		<img src="image/macarronada.png">
+		<!--LINK DA IMAGEM http://cantinadozuza.com.br/receitas/dicas-para-deixar-a-macarronada-soltinha/-->
+		<h4>Macarronada</h4>
+		<p>Prato à moda italiana, refeição rápida e saborosa, disponível nos melhores estabelecimentos do Brasil.</p>
+
+		<img src="image/saladavegan.jpeg">
+		<!--LINK DA IMAGEM http://www.cantinhovegetariano.com.br/2013/04/salada-de-soja-com-brocolis-e-tomate.html-->
+		<h4>Salada Vegan</h4>
+		<p>Para os vegetarianos de plantão, essa salada com carne de sol e brócolis alimenta seu corpo sem agredir o meio ambiente.</p>
+
+		<img src="image/lasanha.jpg">
+		<!--LINK DA IMAGEM http://www.peetersplace.com.br/tag/massa-para-lasanha/-->
+		<h4>Lasanha</h4>
+		<p>Suculenta e irresistível mistura de carne moída, queijos e massas para atender o paladar mais apurado junto com uma taça de vinho.</p>
+	</div>
+
+	<div class="bebidas">
+		<h3>Bebidas</h3>
+
+		<img src="image/acai.jpg">
+		<!--LINK DA IMAGEM http://www.acaifrooty.com.br/blog/dieta-detox-o-acai-esta-dentro/-->
+		<h4>Açaí Gelado</h4>
+		<p>Bebida energética a base de açaí para os atletas de fim de semana que não podem tomar uma tigela de açaí puro.</p>
+
+		<img src="image/caipirinha.jpg">
+		<!--LINK DA IMAGEM http://comidasebebidas.uol.com.br/listas/descubra-os-segredos-para-a-caipirinha-perfeita.htm-->
+		<h4>Caipirinha</h4>
+		<p>Para os apreciadores da cozinha brasileira, temos a caipirosca, bebida a base de cachaça com uma rodela de limão.</p>
+
+		<img src="image/goiaba.jpg">
+		<!--LINK DA IMAGEM http://acainaselva.com.br/produto/suco-de-goiaba/-->
+		<h4>H2Goiaba</h4>
+		<p>Levanta até defunto, essa bebida a base de goiaba junto com uma vaca atolada resolve qualquer problema de ressaca.</p>
+
+		<img src="image/limonada.jpg">
+		<!--LINK DA IMAGEM http://vovopalmirinha.com.br/limonada-suica-da-palmirinha/-->
+		<h4>Limonada</h4>
+		<p>Refrescante e hidratante, tome após os exercícios, mas cuidado com o sol, pois o limão provoca queimaduras na pele.</p>
+
+		<img src="image/clorofila.jpeg">
+		<!--LINK DA IMAGEM http://www.superbom.com.br/blog/suco-de-clorofila-contribui-para-a-boa-forma/-->
+		<h4>Clorofila</h4>
+		<p>Aos admiradores de alimentos naturais e comidas vegan, divirtam-se descobrindo os mistérios desta bebida.</p>
+	</div>
+	<!--img src="">
+	<LINK DA IMAGEM >
+	<h4></h4>
+	<p></p-->
 
 </body>
 </html>
