--- a/arquivos3/index.html
+++ b/arquivos3/index.html
@@ -13,7 +13,7 @@
 		<img src="image/batata.jpeg">
 		<!--LINK DA IMAGEM http://gourmetadois.com/receita/batatas-assadas-com-alecrim-40.html-->
 		<h4>Batata Assada</h4>
-		<p>Excelente repositor de energias, aconselhado como refeição durante o dia para os atletas profissionais.</p>
+		<p>Excelente <span class="textspan">repositor de energias</span>, aconselhado como refeição durante o dia para os atletas profissionais.</p>
 
 		<img src="image/escondidinho.jpg">
 		<!--LINK DA IMAGEM http://www.receitaereceitas.com.br/receita-de-escondidinho-de-arroz/-->
